--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">Example</string>
-    <string name="hello_world">Hello World 2</string>
+    <string name="app_name">OTA Example</string>
+    <string name="hello_world">Hello World</string>
+    <string name="app_subtitle">from PhraseApp</string>
 </resources>
