custom_view_example: add an example for usage in custom views

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">OTA Example</string>
     <string name="hello_world">Hello World</string>
     <string name="app_subtitle">from Phrase</string>
+    <string name="custom_view_text">Custom View Text</string>
 </resources>
